// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axios should DELETE 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "delete",
      "url": "http://localhost/delete/path",
    },
  ],
]
`;

exports[`Axios should GET 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should PATCH 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "patch",
      "url": "http://localhost/patch/path",
    },
  ],
]
`;

exports[`Axios should POST 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "post",
      "url": "http://localhost/post/path",
    },
  ],
]
`;

exports[`Axios should PUT 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "put",
      "url": "http://localhost/put/path",
    },
  ],
]
`;

exports[`Axios should not use base url 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://without-base-url/path",
    },
  ],
]
`;

exports[`Axios should not use base url when specified 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://without-base-url/path",
    },
  ],
]
`;

exports[`Axios should retry once with default options 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should retry with set options 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use basic auth when specified 1`] = `
Array [
  Array [
    Object {
      "auth": Object {
        "password": "pass",
        "username": "user",
      },
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use bearer auth when specified 1`] = `
Array [
  Array [
    Object {
      "headers": Object {
        "Authorization": "Bearer jwt.jwt.jwt",
      },
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use data as specified 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "data_1": "value",
      },
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use headers as specified 1`] = `
Array [
  Array [
    Object {
      "headers": Object {
        "X-Header": "Value",
      },
      "method": "get",
      "url": "http://localhost/get/path",
    },
  ],
]
`;

exports[`Axios should use params as specified 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "url": "http://localhost/get/path/paramValue",
    },
  ],
]
`;

exports[`Axios should use query as specified 1`] = `
Array [
  Array [
    Object {
      "headers": Object {},
      "method": "get",
      "params": Object {
        "query1": "queryValue",
        "query2": "12345",
        "query3": "query%20with%20spaces",
        "query4": "https%3A%2F%2Ftest.lindorm.io%2Froute%2F",
      },
      "url": "http://localhost/get/path/query",
    },
  ],
]
`;
